--- a/system/languages/de.json
+++ b/system/languages/de.json
@@ -18,11 +18,11 @@
                 "-4": "Entsetzlich"
             },
             "Actions": {
-                "Configure": "Einstellen",
+                "Configure": "Anpassen",
                 "Delete": "Löschen",
                 "Duplicate": "Duplizieren",
                 "Sort": "Sortieren",
-                "Create": "Leeren Akteur anlegen",
+                "Create": "Leeren Charakter",
                 "Choose": "Vorlage wählen"
             },
             "BaseItem": "Basis Item"
@@ -38,7 +38,7 @@
             "Extras": "Extras",
             "Bio": "Bio",
             "Artwork": "Artwork",
-            "StressTracks": "Stressbalken",
+            "StressTracks": "Stress",
             "Tabs": {
                 "SkillsStunts": "Fertigkeiten & Stunts",
                 "Skills": "Fertigkeiten",
@@ -47,23 +47,23 @@
                 "Bio": "Bio"
             },
             "Buttons": {
-                "EditMode": "Edit Mode",
-                "SheetSetup": "Sheet Setup"
+                "EditMode": "Bearbeiten-Modus",
+                "SheetSetup": "Bogen Setup"
             },
             "Stress": {
-                "Add": "Add stress track"
+                "Add": "Stress-Track hinzufügen"
             },
             "Messages": {
-                "EmptyActor": "It looks like your character doesn't have any content yet. You can change this in the <strong>Edit Mode</strong> or the <strong>Sheet Setup</strong>. The buttons to toggle the edit mode or open the setup can be found in the header bar."
+                "EmptyActor": "Es sieht so aus als hätte dieser Charakter noch keine Inhalte. Das kannst du ändern über den <strong>Bearbeiten-Modus</strong> oder das <strong>Bogen Setup</strong>. Die Schalter dazu kannst du im Kopfbereich dieses Bogens finden."
             }
         },
         "Item": {
             "Stress": {
                 "Name": "Bezeichner",
-                "EditItem": "Stressbalken Bearbeiten",
+                "EditItem": "Stress Bearbeiten",
                 "Size": "Anzahl Stresskästchen",
                 "Description": "Beschreibung",
-                "DescriptionHelp": "Die Beschreibung wird im Bereich des Stressbalkens angezeigt.",
+                "DescriptionHelp": "Die Beschreibung wird im Bereich des Stress angezeigt.",
                 "Boxes": {
                     "Label": "Stil der Kästchenlabel",
                     "Custom": "Eigene Kästchenlabel",
@@ -126,7 +126,7 @@
                 "Description": "Es gibt noch keine Fertigkeiten-Bedingungen. Um die Automatisierungsfunktion zu nutzen füge mindestens eine Fertigkeiten-Bedingung hinzu.",
                 "AddSkillRef": "Fertigkeiten-Bedingung Hinzufügen",
                 "DisableUntil": "Deaktivieren bis",
-                "BoxesIf": "Wenn Kästchen",
+                "BoxesIf": "Kästchen, wenn",
                 "MultipleConditions": "Automatisierung aktivieren wenn",
                 "MultipleConditionsMatches": "Bedinungen treffen zu",
                 "Actions": {
@@ -140,12 +140,12 @@
                     "OR": "eines"
                 },
                 "Operators": {
-                    "OPERATOR_EQUALS": "gleich",
-                    "OPERATOR_NOT_EQUALS": "ungleich",
-                    "OPERATOR_GT": "größer als",
-                    "OPERATOR_LT": "kleiner als",
-                    "OPERATOR_GTE": "größer gleich",
-                    "OPERATOR_LTE": "kleiner gleich"
+                    "OPERATOR_EQUALS": "ist gleich",
+                    "OPERATOR_NOT_EQUALS": "ist ungleich",
+                    "OPERATOR_GT": "ist größer als",
+                    "OPERATOR_LT": "ist kleiner als",
+                    "OPERATOR_GTE": "ist größer gleich",
+                    "OPERATOR_LTE": "ist kleiner gleich"
                 }
             }
         },
@@ -161,19 +161,19 @@
         },
         "Apps": {
             "Setup": {
-                "Title": "Charakterblatt Setup",
-                "Manage": "Einstellen",
+                "Title": "Bogen Setup",
+                "Manage": "Anpassen",
                 "Setup": "Setup (Vorlagen)",
                 "Actions": {
                     "Clear": {
                         "Aspects": "Aspekte zurücksetzen",
                         "Consequences": "Konsequenzen zurücksetzen",
                         "Skills": "Fertigkeiten zurücksetzen",
-                        "Stress": "Stressleisten zurücksetzen",
+                        "Stress": "Stress zurücksetzen",
                         "Everything": "Alles zurücksetzen"
                     },
                     "Setup": {
-                        "AddToSheet": "Auswahl zum Charakterblatt hinzufügen",
+                        "AddToSheet": "Auswahl zum Bogen hinzufügen",
                         "ToggleSelection": "Auswahl umkehren"
                     }
                 }
@@ -181,8 +181,8 @@
         },
         "Settings": {
             "Templates": {
-                "Title": "Charakterblatt Vorlagen",
-                "Hint": "Erlaubt Vorlagen für neue Charakter zu erstellen und wählen.",
+                "Title": "Charakter Vorlagen",
+                "Hint": "Erlaubt Vorlagen für neue Charaktere zu erstellen und wiederzuverwenden.",
                 "Button": "FateX Vorlagen",
                 "New": "Neue Vorlage",
                 "Copy": "Kopieren",
@@ -190,7 +190,7 @@
                     "Title": "Bearbeiten",
                     "Label": "Einstellungen",
                     "CreateNew": "Neue Vorlage erstellen",
-                    "Help": "Es gibt noch keine Charakterblatt Vorlagen.<br />Klicke den<strong>Neue Vorlage erstellen</strong> Button (auch in der Titelleiste verfügbar)."
+                    "Help": "Es gibt noch keine Charakter Vorlagen.<br />Klicke den<strong>Neue Vorlage erstellen</strong> Button (auch in der Titelleiste verfügbar)."
                 }
             }
         },
@@ -199,11 +199,11 @@
                 "Title": "Vorlage Wählen",
                 "Label": "Vorlagen",
                 "Configuration": "Einstellungen",
-                "Empty": "Leerer Akteur",
-                "CreateEmpty": "Leerer Akteur",
+                "Empty": "Leerer Charakter",
+                "CreateEmpty": "Leerer Charakter",
                 "Or": "oder",
                 "Help": "Klicke den <strong>Einstellungen</strong> Button unten (auch in der Titelleiste verfügbar), um eine neue Vorlage hinzuzufügen.",
-                "Explain": "Vorlagen erlauben angepasste Charakterblätter für verschiedene Sorten von Akteuren. Wir empfehlen <strong>unterschiedliche Vorlagen</strong> für PCs, NPCs, und Mobs, da sie jeweils <strong>andere Anforderungen</strong> an ein Charakterblatt besitzen."
+                "Explain": "Vorlagen erlauben angepasste Charakterblätter für verschiedene Sorten von Charakteren. Wir empfehlen <strong>unterschiedliche Vorlagen</strong> für PCs, NPCs, und Mobs, da sie jeweils <strong>andere Anforderungen</strong> an ein Charakterblatt besitzen."
             }
         }
     }
