Fixed italian language file, updated all dependencies and fixed build errors

--- a/system/languages/it.json
+++ b/system/languages/it.json
@@ -3,7 +3,7 @@
     "FAx": {
         "name": "FateX",
         "Global": {
-            "Scala": {
+            "Ladder": {
                 "+8": "Leggendario",
                 "+7": "Epico",
                 "+6": "Fantastico",
