Added full scene based groups

--- a/system/languages/en.json
+++ b/system/languages/en.json
@@ -214,7 +214,10 @@
             }
         },
         "ActorGroups": {
-            "New": "New group"
+            "New": "New group",
+            "Notifications": {
+                "ManualOnly": "This groups actors are managed automatically. If you want to manually add actors, change the groups type to \"manual\"."
+            }
         }
     }
 }
