Updated readme and changlog to reflect latest changes

--- a/system/languages/en.json
+++ b/system/languages/en.json
@@ -199,6 +199,12 @@
                     "CreateNew": "Create new template",
                     "Help": "There are no configured templates yet.<br />To add a new template, click on the <strong>Create new template</strong> button (also available in the header bar)."
                 }
+            },
+            "System": {
+                "Alpha": {
+                    "Name": "Enable alpha features",
+                    "Hint": "This setting enables experimental FateX alpha features. Alpha features are subject to change."
+                }
             }
         },
         "Template": {
