--- a/system/languages/pt-BR.json
+++ b/system/languages/pt-BR.json
@@ -192,7 +192,7 @@
                 "Hint": "Permite que você escolha a aparência das fichas de personagem para novos personagens.",
                 "Button": "Modelos FateX",
                 "New": "Novo modelo",
-                "Copy": "Copiar",
+                "Copy": "Cópia",
                 "App": {
                     "Title": "Configurar Modelos",
                     "Label": "Configurações",
