Add own translation for -4 and -5 values on the lader until more official translation is found

--- a/system/languages/ru.json
+++ b/system/languages/ru.json
@@ -16,8 +16,8 @@
                 "-1": "Плохой",
                 "-2": "Ужасный",
                 "-3": "Катастрофический",
-                "-4": "Horrifying TODO",
-                "-5": "Pathetic TODO"
+                "-4": "Чудовищный",
+                "-5": "Жалкий"
             },
             "Actions": {
                 "Configure": "Настроить",
